handle more screen sizes, scroll to top on navigation, fix image size on small screens

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size: auto;
     margin: 4vh 0vw;
+    background-size: cover;
 }
 
 .parallax2 {
@@ -13,6 +14,7 @@
     background-repeat: no-repeat;
     background-size: auto;
     margin: 4vh 0vw;
+    background-size: contain;
 }
 
 @media screen and (min-width: 1100px) {
@@ -69,6 +71,12 @@
     .availability {
         width: 100%;
     }
+    .parallax1 {
+        height: 25vh;
+    }
+    .parallax2 {
+        height: 30vh;
+    }
   }
   @media screen and (max-width: 458px) {
     .highways {
@@ -78,7 +86,7 @@
 
   @media screen and (min-width: 768px) and (max-width: 1100px) {
     .parallax1 {
-        height: 40vh;
+        height: 50vh;
     }
     .parallax2 {
         height: 50vh;
